--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,11 @@ body {
 
 }
 
-.header-hero {
+.header-hero , .default-hero {
     min-height: calc(100vh -  66px);
     background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url("./images/homeBcg.jpeg") center/cover no-repeat;
+}
+.default-hero {
+
+    background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url("./images/defaultBcg.jpeg") center/cover no-repeat;
 }
